<resources>
    <string name="app_name">Sankalan</string>
    <string name="sign_in">Sign in</string>
    <string name="not_registered_yet_message">Not registered yet ?</string>
    <string name="string_not_registered_yet_message" />
    <string name="register_here"><u>Register here</u></string>
    <string name="Enter_Email">Enter Your Email-Id</string>
    <string name="enter_password">Enter your password</string>
    <string name="email_id">Email-ID</string>
    <string name="password">Password</string>
    <string name="view_Password">View Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="forgotPassword"><u>Forgot Password ?</u></string>
    <string name="login">LogIn</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>


    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="login_here"><u>Login here</u></string>
    <string name="full_name">Full Name</string>
    <string name="Enter_Name">Enter Full Name</string>
    <string name="College_Name">Enter College Name</string>
    <string name="Enter_course">Enter Your Course</string>
    <string name="Enter_Course_year">Year of the Course</string>
    <string name="Enter_Mobile_Num">Enter Mobile Number</string>
    <string name="name">Name</string>
    <string name="CollegeName">College</string>
    <string name="CourseName">Course</string>
    <string name="yoc">Course Year</string>
    <string name="mobile">Mobile</string>
    <string name="pswrdReset">Reset your password</string>
    <string name="confirmEmail">Confirm Email-ID</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_password">Reset Password</string>
    <string name="event_name">Event Name</string>
    <string name="member_1">Member 1</string>
    <string name="full_name1">Full Name</string>
    <string name="member_2">Member 1</string>
    <string name="full_name2">Full Name</string>
    <string name="member_3">Member 1</string>
    <string name="full_name3">Full Name</string>
    <string name="member_4">Member 1</string>
    <string name="full_name4">Full Name</string>


    <string name="home">Home</string>
    <string name="gallery">gallery</string>
    <string name="about_us">About Us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valo_wars">Valo Wars</string>
    <string name="valo_wars_time">Timing</string>
    <string name="non_technical">Non-Technical</string>
    <string name="technical">Technical</string>
    <string name="timing">Timing</string>
    <string name="team">Team</string>
    <string name="venue">Venue</string>
    <string name="event_poster">Event Poster</string>
    <string name="contact_person">Contact Person</string>

    <string name="if_you_want">If you want to edit your details </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">PassWord Must Contains a number a character a capital letter and a Small letter.</string>
    <string name="invalid_mobile">Mobile Number have to be length of 10.</string>
    <string name="invalid_course_year">Invalid Course Year.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_user">User</string>
    <string name="empty_edtit_text">Required</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="MyProfile">MY Profile</string>
    <string name="MyEvents">MY Events</string>
    <string name="MyTeam">My Team</string>
    <string name="ScoreBoard">ScoreBoard</string>
    <string name="HelpandFeedBack">Help/FeedBack</string>
    <string name="AboutUs">About Us</string>
    <string name="gallery">Gallery</string>
    <string name="events">Events</string>
</resources>