<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/MyProfile"
            android:id="@+id/myProfileFragment"/>
        <item
            android:id="@+id/myEventsFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/MyEvents" />
        <item android:title="@string/MyTeam"
            android:id="@+id/myTeamFragment"/>
        <item android:title="@string/ScoreBoard"
            android:id="@+id/scoreboardFragment"/>
        <item android:title="@string/HelpandFeedBack"
            android:id="@+id/helpFragment"/>
    </group>

</menu>