<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_here"
        android:textColor="@color/royal_purple"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toEndOf="@+id/message_for_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/sign_up"
        tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginStart="35dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message_for_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/already_registered"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_for_sign_in">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/FullName"
                android:layout_width="360dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:autofillHints="false"
                android:drawableStart="@drawable/name"
                android:ems="10"
                android:hint="@string/Enter_Name"
                android:inputType="textPersonName"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/CollegeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/CollegeName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/CollegeName"
                android:layout_width="360dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:autofillHints="false"
                android:drawableStart="@drawable/college"
                android:ems="10"
                android:hint="@string/College_Name"
                android:inputType="text"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/CourseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/CourseName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/CourseName"
                android:layout_width="360dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:autofillHints="false"
                android:drawableStart="@drawable/course"
                android:ems="10"
                android:hint="@string/Enter_course"
                android:inputType="text"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/YearOfCourseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/yoc"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/courseYear"
                android:layout_width="360dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:autofillHints="false"
                android:drawableStart="@drawable/course_year"
                android:ems="10"
                android:hint="@string/Enter_Course_year"
                android:inputType="number"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/MobileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobileNum"
                android:layout_width="360dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:autofillHints="false"
                android:drawableStart="@drawable/phone"
                android:ems="10"
                android:hint="@string/Enter_Mobile_Num"
                android:inputType="phone"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enterEmail"
                android:layout_width="360dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:autofillHints="false"
                android:drawableStart="@drawable/email"
                android:ems="10"
                android:hint="@string/Enter_Email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/PasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/createPassword"
                android:layout_width="360dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:autofillHints="false"
                android:drawableStart="@drawable/password_logo"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="315dp"
                android:layout_height="59dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="14dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold"
                app:flow_horizontalAlign="center"
                app:flow_verticalAlign="center"
                 />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>