<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/passwordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginStart="35dp"
        android:text="@string/pswrdReset"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/emailTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/email_id"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordReset" />

    <EditText
        android:id="@+id/emailAddress1"
        android:layout_width="360dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:autofillHints="false"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/Enter_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView2" />

    <Button
        android:id="@+id/emailConfirm"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="confirmEmail"
        android:text="@string/confirmEmail"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress1"
        tools:ignore="UsingOnClickInXml" />
    <TextView
        android:id="@+id/passwordTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailConfirm" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="360dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:autofillHints="false"
        android:drawableStart="@drawable/passwordlogo"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView2"
        tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    <Button
        android:id="@+id/passwordChange"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="changePassword"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>